RM-8097 Fix alignment of BocList validation error marker in NovaGray theme.

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
@@ -591,7 +591,7 @@ span.bocListEditableCell .control
 
 span.bocListEditableCell .validationErrorMarker + .control
 {
-  padding-left: 14px;
+  padding-left: 16px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
